# Astrologer-API

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHART_DATA_EXPLAINED.md  Dockerfile  ENDPOINTS.md  ENDPOINTS_SUMMARY.md  README.md  TODO.md  docker-compose.yml  dump_schema.py  openapi.json  pyproject.toml
.github/workflows/: release-production.yml  release-staging.yml
RapidAPI_Docs/Data/: Natal_Data.md  (+20 more)
Release Notes/: v5.6.0.md
app/: main.py
docs/: README.md
scripts/: generate_docs_examples.py  generate_rapidapi_docs.py
tests/: conftest.py  test_astrological_data_validation.py  test_derived_profile_utils.py  test_distribution_methods.py  test_fixed_stars_points.py  test_hmac_auth_middleware.py  test_rendering_options.py  test_response_models.py  test_returns_advanced.py  test_v5_additional_returns.py  test_v5_aspect_events.py  test_v5_chart_data_validation.py  test_v5_charts_composite.py  test_v5_charts_natal.py  test_v5_charts_synastry.py  test_v5_charts_transit.py  test_v5_compatibility_score.py  test_v5_conjunction_events.py  test_v5_context_endpoints.py  test_v5_derived_natal_profile.py  test_v5_eclipse_events.py  test_v5_error_handling.py  test_v5_errors.py  test_v5_extra_fields_validation.py  test_v5_health_status.py  test_v5_historical_figures.py  test_v5_ingress_events.py  test_v5_internal_helpers.py  test_v5_lunar_phase_events.py  test_v5_now.py  test_v5_progressed_moon_cycle.py  test_v5_retrograde_events.py  test_v5_retrogrades_next.py  test_v5_returns.py  test_v5_split_chart.py  test_v5_subject.py  test_zodiac_configurations.py
(+114 files in other folders)
